added copyright blocks

--- a/notebooks/LatticeMLReader.ipynb
+++ b/notebooks/LatticeMLReader.ipynb
@@ -57,7 +57,7 @@
     "DATA_LOAD_ARGS = ['reload_size','batch_load','shuffle','reuse','num_reuse_samples','times_reused','output_int_base','correctQ','balanced_base','add_unred_perc']\n",
     "MODEL_ARGS = ['max_output_len','max_len','xav_init','gelu_activation','norm_attention','dropout','attention_dropout','use_circreg','reg_value']\n",
     "EVAL_ARGS = ['eval_only','eval_from_exp','eval_data','eval_verbose','eval_verbose_print','stopping_criterion','validation_metrics']\n",
-    "RUN_ARGS = ['fp16','amp','debug_slurm','debug','debug_zeyuan','cpu','local_rank','master_port','windows','nvidia_apex','is_slurm_job','node_id','global_rank','world_size']\n",
+    "RUN_ARGS = ['fp16','amp','debug_slurm','debug','cpu','local_rank','master_port','windows','nvidia_apex','is_slurm_job','node_id','global_rank','world_size']\n",
     "UNWANTED_ARGS = DATA_LOAD_ARGS + MODEL_ARGS + EVAL_ARGS + RUN_ARGS + ['dim_red','data_cols','dense_cols']\n"
    ]
   },
